--- a/exercises/TD03_fonctions/03_fonctions.ipynb
+++ b/exercises/TD03_fonctions/03_fonctions.ipynb
@@ -284,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +298,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a964934c4de93dafc8df2fb3f1ea68ae2d5b7333634b77d81a4e141721c29a16"
+   }
   }
  },
  "nbformat": 4,
